[package]
name = "groth16"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-poly = "0.5.0"
ark-relations = "0.5.0"
num-traits = { version = "0.2.18", default-features = false }
rayon = "1.8.1"
tracing = { version = "0.1.40" }
eyre = "0.6"

[dev-dependencies]
criterion = "0.7"
#ark-groth16-git = { package = "ark-groth16", git = "https://github.com/arkworks-rs/groth16" }
ark-bn254 = "0.5.0"
ark-std = "0.5.0"
ark-snark = "0.5.0"
ark-circom = "0.5"

[[bench]]
name = "groth16"
harness = false
